src/app/globals.css
@import "tailwindcss";

:root {
  --background: #f3f3ff;
  --foreground: #171717;
}

@theme {
  --color-magnolia-50: #F3F3FF;
  --color-magnoloa-100: #E9E9FE;
  --color-magnoloa-200: #D6D6FE;
  --color-magnolia-800: #4221B6;
  --color-magnolia-900: #381D95;
  --color-magnolia-950: #201065;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

.dark{
  --background: #0a0a0a;
  --foreground: #ededed;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

